--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ flex-wrap: wrap;
     line-height: 23px;
 }
 .cube{
-    width: 684px;
+
     height: 456.39px;
     background: rgba(196, 222, 253, 1);
 }
@@ -139,8 +139,15 @@ flex-wrap: wrap;
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center; /* Выравнивание элементов по вертикали (если нужно) */
+        justify-content: center;
         text-align: center;
 
     }
+    .Project button{
+
+        margin-bottom: 100px;
+    }
+    .All{
+        display: block;
+        }
 }
