--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@
 
 
 .TWO {
-    padding: 100px calc(1.5vw + 11.259px);
+    padding: calc(5.6vw + 62.222px)  calc(1.5vw + 11.259px);
     background: rgba(4, 56, 115, 1) url('./image/Element1.svg') no-repeat center center;
     background-size: cover;
 }
@@ -120,6 +120,70 @@ max-width: 679px;
 
 
 
+
+.grid-container {
+    display: grid;
+    padding: calc(5.6vw + 62.222px)  calc(1.5vw + 11.259px);
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, auto);
+    grid-template-areas: 
+    "item-1" "item-2"
+    "item-3" "item-4";
+}
+
+
+.Management {
+    display: flex;
+    flex-direction: column;
+    justify-content: center; 
+    height: 100%;
+}
+
+.ManagementIMG {
+    width: 100%;
+    max-width: 719px;
+}
+
+.Together {
+    width: 100%;
+    max-width: 583px;
+}
+
+.Management h2 {
+    width: calc(30.5vw + 190.519px);
+    font-size: calc(3.3vw + 25.333px);
+    font-weight: 700;
+    line-height: calc(4vw + 30.66px);
+    margin-bottom: 24px;
+    color: rgba(33, 37, 41, 1);
+}
+
+.Management p {
+    width: calc(30.5vw + 190.519px);
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+    margin-bottom: 60px;
+    color: rgba(33, 37, 41, 1);
+}
+
+.grid-container button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 201px;
+    height: 63px;
+    border-radius: 8px;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 23px;
+    background: rgba(79, 156, 249, 1);
+    margin-bottom: 60px;
+}
+
+
+
+
 @media (max-width:770px){
     .TWO {
         background: rgba(4, 56, 115, 1) url('./image/Element2.svg') no-repeat center center;
@@ -155,4 +219,35 @@ max-width: 679px;
     .All{
         display: block;
         }
+        .Management {
+            display: flex;
+            flex-direction: column;
+            align-items: center; /* Center align horizontally */
+            justify-content: center; /* Center align vertically */
+            height: 100%; /* Ensure the container takes full height of the grid cell */
+            text-align: center; /* Center align text */
+        }
+        .ManagementIMG{
+            margin-bottom: 100px;
+        }
+        .grid-container {
+            display: flex;
+            flex-direction: column;
+        }
+        .grid-item {
+            order: 0; 
+        }
+        .item-1 {
+            order: 1;
+        }
+        .item-2 {
+            order: 2; 
+        }
+        .item-4 {
+            order: 3;
+        }
+        .item-3 {
+            order: 4; 
+        }
+    
 }
