--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
     display: flex;
     gap: 217px;
     align-items: center;
+    justify-content: space-between;
 }
 .logo{
     width: 100%;
@@ -75,8 +76,9 @@
 }
 
 .All{
-display: flex;
-flex-wrap: wrap;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 .Project {
     display: flex;
@@ -130,7 +132,11 @@ border-radius: 30px;
     grid-template-areas: 
     "item-1 item-2"
     "item-3 item-4";
-
+}
+.grid-item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .item-1{
     grid-area: item-1;
@@ -207,17 +213,18 @@ border-radius: 30px;
 
 .container {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
     flex-wrap: wrap;
 }
 
 .feature-info {
-    display: flex;
     flex-direction: column;
     justify-content: center;
 }
 
 .feature-info h2 {
-    width: calc(34.1vw + 178.963px);
+    width: calc(24.4vw + 209.778px);
     font-size: calc(2.6vw + 27.704px);
     font-weight: 700;
     line-height: calc(3.1vw + 33.531px);
@@ -225,7 +232,7 @@ border-radius: 30px;
 }
 
 .feature-info p {
-    width: calc(34.1vw + 178.963px);
+    width: calc(24.4vw + 209.778px);
     font-size: 18px;
     font-weight: 400;
     line-height: 30px;
@@ -240,13 +247,71 @@ border-radius: 30px;
     font-size: 18px;
     font-weight: 500;
     line-height: 23px;
+    margin-bottom: 60px;
 }
 
 .feature-image {
     width: 100%;
     max-width: 679px;
-    border-radius: 30px;
+    border-radius: 30px; 
 }
+
+
+
+
+
+
+
+
+.customization{
+    padding: calc(5.6vw + 62.222px) calc(1.5vw + 11.259px);
+    background: rgba(255, 255, 255, 1);
+    background-size: cover;
+    
+}
+
+.Customise {
+    display: flex;
+    gap: 60px;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.Customise-info h2 {
+    width: calc(24.4vw + 209.778px);
+    font-size: calc(2.6vw + 27.704px);
+    font-weight: 700;
+    line-height: calc(3.1vw + 33.531px);
+    margin-bottom: 24px;
+    color: rgba(33, 37, 41, 1);
+}
+
+.Customise-info p {
+    width: calc(24.4vw + 209.778px);
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+    margin-bottom: 60px;
+    color: rgba(33, 37, 41, 1);
+}
+
+.Customise-info button {
+    width: 227px;
+    height: 60px;
+    border-radius: 8px;
+    background: rgba(79, 156, 249, 1);
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 23px;
+    margin-bottom: 60px;
+}
+
+.Customise-image {
+    width: 100%;
+    max-width: 679px;
+    border-radius: 30px; 
+
+}
+
 
 
 
@@ -310,4 +375,21 @@ border-radius: 30px;
                         "item-3";
     
     }
+    .container {
+        display: flex;
+        flex-direction: column;
+        align-items: center; 
+        justify-content: center;
+        height: 100%;
+        text-align: center; 
+    }
+    .Customise {
+        display: flex;
+        flex-direction: column;
+        align-items: center; 
+        justify-content: center;
+        height: 100%;
+        text-align: center; 
+    }
+
 }
